user token route doc
